opam-version: "1.2"
maintainer: "Leonid Rozenberg <leonidr@gmail.com>"
authors: "Leonid Rozenberg <leonidr@gmail.com>"
homepage: "https://github.com/rleonid/partition_map/"
dev-repo: "git+https://github.com/rleonid/partition_map.git"
bug-reports: "https://github.com/rleonid/partition_map/issues"
license: "Apache2"

available: [ ocaml-version >= "4.06" ]

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs]
]

depends: [
#  "ocaml"               { >= "4.06" }
  "dune"            {build & >= "1.0" }
  "bisect_ppx"          { build }
]
